; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_recursive_planning.c_AllDistributionKeysInSubqueryAreEqual.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_recursive_planning.c_AllDistributionKeysInSubqueryAreEqual.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@NIL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32*)* @AllDistributionKeysInSubqueryAreEqual to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @AllDistributionKeysInSubqueryAreEqual(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 0, i32* %6, align 4
  store i32* null, i32** %7, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @NIL, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %25

14:                                               ; preds = %2
  %15 = load i32*, i32** %5, align 8
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %17 = call i32* @FilterPlannerRestrictionForQuery(i32* %15, %struct.TYPE_5__* %16)
  store i32* %17, i32** %7, align 8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @AllDistributionKeysInQueryAreEqual(%struct.TYPE_5__* %18, i32* %19)
  store i32 %20, i32* %6, align 4
  %21 = load i32, i32* %6, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %14
  store i32 0, i32* %3, align 4
  br label %25

24:                                               ; preds = %14
  store i32 1, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %23, %13
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32* @FilterPlannerRestrictionForQuery(i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @AllDistributionKeysInQueryAreEqual(%struct.TYPE_5__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
